--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -69,6 +69,7 @@ nav {
       display: inline-block;
       text-align: center;
 
+      // allows vertical middle alignment
       &:before {
         content: '';
         display: inline-block;
