--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -49,13 +49,25 @@ nav {
     touch-action: manipulation;
   }
 
-  .nav-logo {
-    width: $navbar-height - 20px;
-    max-width: 100px;
-    opacity: 0.7;
+  .nav-logo-container {
+    height: 100%;
 
-    @media screen and (max-width: $transition-width-mobile) {
-      width: $navbar-height-mobile - 10px;
+    a {
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      .nav-logo {
+        width: $navbar-height - 20px;
+        max-width: 100px;
+        opacity: 0.7;
+        padding-left: 15px;
+
+        @media screen and (max-width: $transition-width-mobile) {
+          width: $navbar-height-mobile - 10px;
+          padding-left: 5px;
+        }
+      }
     }
   }
 
@@ -67,6 +79,7 @@ nav {
 
     @media screen and (max-width: $transition-width-mobile) {
       display: inline;
+      padding-right: 30px;
     }
   }
 
@@ -108,7 +121,30 @@ nav {
     top: 0;
     bottom: 0;
     right: 0;
-    left: 30%;
+    left: 40%;
     background-color: #ffe4bb;
+    flex-direction: column;
+    align-items: center;
+    display: none;
+
+    a {
+      width: 100%;
+      padding: 1.75em 0;
+      margin: 0.3em 0;
+      background-color: #ffd08a;
+
+      &:first-child {
+        margin-top: $navbar-height-mobile;
+      }
+
+      span {
+        display: inline-block;
+        margin-left: 2em;
+      }
+    }
+
+    @media screen and (max-width: $transition-width-mobile) {
+      display: flex;
+    }
   }
 }
