continue nav logic

--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -65,7 +65,7 @@ nav {
   .nav-logo-container {
     height: 100%;
 
-    a {
+    span {
       height: 100%;
       display: flex;
       align-items: center;
