--- a/react-frontend/src/index.scss
+++ b/react-frontend/src/index.scss
@@ -5,6 +5,7 @@ body {
   font-weight: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
 code {
