--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -74,11 +74,11 @@ nav {
         width: $navbar-height - 20px;
         max-width: 100px;
         opacity: 0.7;
-        padding-left: 15px;
+        padding-left: 2vw;
 
         @media screen and (max-width: $transition-width-mobile) {
           width: $navbar-height-mobile - 10px;
-          padding-left: 5px;
+          padding-left: 3vw;
         }
       }
     }
@@ -86,14 +86,16 @@ nav {
 
   .nav-hamburger,
   .nav-exit {
-    width: 8vh;
     height: 100%;
     max-width: 60px;
     display: none;
 
     @media screen and (max-width: $transition-width-mobile) {
-      display: inline;
-      padding-right: 30px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-left: 5vw;
+      padding-right: 5vw;
     }
   }
 
