--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -106,13 +106,14 @@ nav {
   .nav-links {
     height: 100%;
     margin-right: 2vw;
+    font-size: 1.1rem;
 
     @media screen and (max-width: $transition-width-mobile) {
       display: none;
     }
 
     a {
-      width: 150px;
+      width: 160px;
       margin: 0;
       height: 100%;
       display: inline-block;
@@ -142,11 +143,12 @@ nav {
     flex-direction: column;
     align-items: center;
     display: none;
+    font-size: 1.1rem;
 
     a {
       width: 100%;
-      padding: 1.75em 0;
-      margin: 0.3em 0;
+      padding: 1.5rem 0;
+      margin: 0.3rem 0;
       background-color: #ffd08a;
 
       &:first-child {
@@ -155,7 +157,7 @@ nav {
 
       span {
         display: inline-block;
-        margin-left: 2em;
+        margin-left: 1.5rem;
       }
     }
 
