--- a/react-frontend/src/App.scss
+++ b/react-frontend/src/App.scss
@@ -1,34 +1,8 @@
-$transition-width-mobile: 768px;
-// $navbar-height: 100px;
-// $navbar-height-mobile: 60px;
-// $red: #ff007f 0%;
-// $orange: rgba(255, 170, 29, 0.739583) 80.46%;
 
+// global stuff
 a {
   text-decoration: none;
   color: black;
-}
-
-button {
-  &.judge-btn {
-    color: white;
-    background-color: black;
-    padding: 1em 1.5em;
-  }
-
-  // &.nav-btn {
-  //   background-color: unset;
-  //   border: unset;
-  //   padding: 0;
-  
-  //   &:focus,
-  //   &:active,
-  //   &:hover,
-  //   &:visited {
-  //     outline: none;
-  //     opacity: 1;
-  //   }
-  // }
 }
 
 h1,
@@ -43,167 +17,3 @@ h1 {
 h2 {
   font-size: 1rem;
 }
-
-// nav {
-//   width: 100%;
-//   height: $navbar-height;
-//   display: flex;
-//   justify-content: space-between;
-//   background: linear-gradient(
-//     270deg,
-//     $red,
-//     $orange,
-//     rgba(255, 240, 0, 0) 98.59%
-//   );
-
-//   @media screen and (max-width: $transition-width-mobile) {
-//     height: $navbar-height-mobile;
-//   }
-
-//   button {
-//     opacity: 0.6;
-//   }
-
-//   .nav-logo,
-//   .nav-hamburger,
-//   .nav-exit {
-//     touch-action: manipulation;
-//   }
-
-//   .nav-logo-container {
-//     height: 100%;
-
-//     span {
-//       height: 100%;
-//       display: flex;
-//       align-items: center;
-
-//       .nav-logo {
-//         width: $navbar-height - 20px;
-//         max-width: 100px;
-//         opacity: 0.7;
-//         padding-left: 2vw;
-
-//         @media screen and (max-width: $transition-width-mobile) {
-//           width: $navbar-height-mobile - 10px;
-//           padding-left: 3vw;
-//         }
-//       }
-//     }
-//   }
-
-//   .nav-hamburger,
-//   .nav-exit {
-//     height: 100%;
-//     display: none;
-
-//     @media screen and (max-width: $transition-width-mobile) {
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       padding-left: 5vw;
-//       padding-right: 5vw;
-//     }
-//   }
-
-//   .nav-exit {
-//     z-index: 1;
-//   }
-
-//   .nav-links {
-//     height: 100%;
-//     margin-right: 2vw;
-//     font-size: 1.1rem;
-
-//     @media screen and (max-width: $transition-width-mobile) {
-//       display: none;
-//     }
-
-//     a {
-//       width: 160px;
-//       margin: 0;
-//       height: 100%;
-//       display: inline-block;
-//       text-align: center;
-
-//       // allows vertical middle  alignment
-//       &:before {
-//         content: '';
-//         display: inline-block;
-//         vertical-align: middle;
-//         height: 100%;
-//       }
-
-//       &:hover {
-//         background-color: orange;
-//       }
-//     }
-//   }
-
-//   .nav-links-mobile {
-//     position: absolute;
-//     top: 0;
-//     bottom: 0;
-//     right: 0;
-//     left: 40%;
-//     background-color: #ffe4bb;
-//     flex-direction: column;
-//     align-items: center;
-//     display: none;
-//     font-size: 1.1rem;
-
-//     a {
-//       width: 100%;
-//       padding: 1.5rem 0;
-//       margin: 0.3rem 0;
-//       background-color: #ffd08a;
-
-//       &:first-child {
-//         margin-top: $navbar-height-mobile;
-//       }
-
-//       span {
-//         display: inline-block;
-//         margin-left: 1.5rem;
-//       }
-//     }
-
-//     @media screen and (max-width: $transition-width-mobile) {
-//       display: flex;
-//     }
-//   }
-// }
-
-// .title {
-  // width: 100%;
-  // text-align: center;
-
-  // @media screen and (max-width: $transition-width-mobile) {
-  //   h1 {
-  //     margin: 0.5rem 0;
-  //   }
-  //   h2 {
-  //     margin-top: 0.2rem;
-  //   }
-  // }
-// }
-
-// .container {
-//   max-width: 600px;
-//   margin: 0 auto;
-
-//   @media screen and (max-width: $transition-width-mobile) {
-//     width: 80%;
-//   }
-// }
-
-// .judge-color {
-//   margin: 0 auto;
-//   width: 90%;
-
-//   &:after {
-//     content: '';
-//     display: block;
-//     padding-bottom: 97%;
-//   }
-// }
