--- a/react-frontend/src/index.scss
+++ b/react-frontend/src/index.scss
@@ -1,5 +1,12 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+html,
 body {
   margin: 0;
+  padding: 0;
   font-family: roboto_monoregular;
   font-style: normal;
   font-weight: normal;
