--- a/react-frontend/src/index.scss
+++ b/react-frontend/src/index.scss
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: #f8f8ff;
 }
 
 code {
