--- a/nginx/nginx.tmpl
+++ b/nginx/nginx.tmpl
@@ -334,10 +334,41 @@ server {
 		{{ end }}
 	}
 
-        # ADDED BY LEO
-        location /api/ {
-          proxy_pass http://play-backend:9000/;
-        }
+  # ADDED BY LEO
+  location /api/ {
+    proxy_pass http://play-backend:9000/;
+  }
+}
+
+# ADDED BY LEO
+server {
+  listen 80 default_server;
+  server_name /var/www/{{ $host }};
+
+  root /var/www/{{ $host }};
+  index index.html index.htm;      
+
+  location ~* \.(?:manifest|appcache|html?|xml|json)$ {
+    expires -1;
+    # access_log logs/static.log; # I don't usually include a static log
+  }
+
+  location ~* \.(?:css|js)$ {
+    try_files $uri =404;
+    expires 1y;
+    access_log off;
+    add_header Cache-Control "public";
+  }
+
+  # Any route containing a file extension (e.g. /devicesfile.js)
+  location ~ ^.+\..+$ {
+    try_files $uri =404;
+  }
+
+  # Any route that doesn't have a file extension (e.g. /devices)
+  location / {
+      try_files $uri $uri/ /index.html;
+  }
 }
 
 {{ end }}
