--- a/nginx/nginx.tmpl
+++ b/nginx/nginx.tmpl
@@ -310,9 +310,6 @@ server {
 	{{ end }}
 
 	location / {
-    # ADDED BY LEO
-    try_files $uri /index.html;
-    
 		{{ if eq $proto "uwsgi" }}
 		include uwsgi_params;
 		uwsgi_pass {{ trim $proto }}://{{ trim $upstream_name }};
@@ -345,7 +342,7 @@ server {
 
 # ADDED BY LEO
 server {
-  listen 80 default_server;
+  listen 80 {{ $default_server }};
   server_name /var/www/{{ $host }};
 
   root /var/www/{{ $host }};
